--- a/README.rdoc
+++ b/README.rdoc
@@ -1,17 +1,15 @@
 = lolita-menu
 
-Description goes here.
-
-== Contributing to lolita-menu
- 
-* Check out the latest master to make sure the feature hasn't been implemented or the bug hasn't been fixed yet
-* Check out the issue tracker to make sure someone already hasn't requested it and/or contributed it
-* Fork the project
-* Start a feature/bugfix branch
-* Commit and push until you are happy with your contribution
-* Make sure to add tests for it. This is important so I don't break it in a future version unintentionally.
-* Please try not to mess with the Rakefile, version, or history. If you want to have your own version, or is otherwise necessary, that is fine, but please isolate to its own commit so I can cherry-pick around it.
-
+== Instalation
+In your Gemfile put 
+    gem 'lolita-menu'
+And run
+    bundle install
+After that, like with other Lolita gems, call.
+    rails g lolita_menu:install
+Since this gem comes with migration you should run
+    rake db:migrate
+Enjoy!
 == Copyright
 
 Copyright (c) 2011 ITHouse and Arturs Meisters. See LICENSE.txt for
