--- a/README.rdoc
+++ b/README.rdoc
@@ -1,17 +1,7 @@
-= lolita-menu
+=== Version 0.0.2 / 2011-05-20
+* Bug fixes
+  * migrations have one timestamp 
 
-== Instalation
-In your Gemfile put 
-    gem 'lolita-menu'
-And run
-    bundle install
-After that, like with other Lolita gems, call.
-    rails g lolita_menu:install
-Since this gem comes with migration you should run
-    rake db:migrate
-Enjoy!
-== Copyright
-
-Copyright (c) 2011 ITHouse and Arturs Meisters. See LICENSE.txt for
-further details.
-
+=== Version 0.0.1 / 2011-05-19
+  * Basic models, controllers, views
+  * JavaScripts, Style, Migrations
