History Readme Migrations

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,7 +1,18 @@
-=== Version 0.0.2 / 2011-05-20
-* Bug fixes
-  * migrations have one timestamp 
+= lolita-menu
 
-=== Version 0.0.1 / 2011-05-19
-  * Basic models, controllers, views
-  * JavaScripts, Style, Migrations
+Description goes here.
+
+== Contributing to lolita-menu
+ 
+* Check out the latest master to make sure the feature hasn't been implemented or the bug hasn't been fixed yet
+* Check out the issue tracker to make sure someone already hasn't requested it and/or contributed it
+* Fork the project
+* Start a feature/bugfix branch
+* Commit and push until you are happy with your contribution
+* Make sure to add tests for it. This is important so I don't break it in a future version unintentionally.
+* Please try not to mess with the Rakefile, version, or history. If you want to have your own version, or is otherwise necessary, that is fine, but please isolate to its own commit so I can cherry-pick around it.
+
+== Copyright
+
+Copyright (c) 2011 ITHouse and Arturs Meisters. See LICENSE.txt for
+further details.
