--- a/History.rdoc
+++ b/History.rdoc
@@ -1,4 +1,6 @@
-=== Version 0.0.3 / 
+=== Version 0.0.3 /  2011-05-19
+* Enhancements
+  * README updated
 
 === Version 0.0.2 / 2011-05-19
 * Bug fixes
