--- a/History.rdoc
+++ b/History.rdoc
@@ -1,3 +1,7 @@
+=== Version 0.0.4 / 2011-05-19
+* Bug fixes
+  * Wrong table names for models
+
 === Version 0.0.3 /  2011-05-19
 * Enhancements
   * README updated
