--- a/History.rdoc
+++ b/History.rdoc
@@ -1,3 +1,7 @@
+=== Version 0.0.5 / 2011-05-19
+* Bug fixes
+  * HAML dependencies not supported
+  
 === Version 0.0.4 / 2011-05-19
 * Bug fixes
   * Wrong table names for models
