--- a/History.rdoc
+++ b/History.rdoc
@@ -1,3 +1,7 @@
+=== Version 0.0.6 / 2011-05-19
+* Bug fixes
+  * Can't recognize HAML files in projects without haml.
+  
 === Version 0.0.5 / 2011-05-19
 * Bug fixes
   * HAML dependencies not supported
