--- a/History.rdoc
+++ b/History.rdoc
@@ -1,3 +1,7 @@
+=== Version 0.0.12 / 2011-08-23
+* Enhancements
+  * Autocomplete for url added
+  
 === Version 0.0.9 / 2011-06-10
 * Enhancements
   * Active item detection based on request
