--- a/README.rdoc
+++ b/README.rdoc
@@ -9,8 +9,13 @@ And run
 Like with other Lolita gems call
   rails g lolita_menu:install
 Since this gem comes with migrations
-  rake db:migrate
-
+  rake db:migrate 
+=== Using autocomplete
+To use autocomplete you need to add all possible url's in config/lolita-menu-urls.rb (follow instructions in file)
+After that you can popuate all from file in result file by execucuting
+  rake lolita_menu:generate
+If you want to add url when some of objects are created, then in your model add after_save or after_create callbacks and in related method add
+  Lolita::Menu::Urls.add("/link", "Label"), unfortuneately it's impossible to use routes helper methods unless you do your own workaround.
 Enjoy!
     
 ==Copyright
