--- a/History.rdoc
+++ b/History.rdoc
@@ -1,3 +1,6 @@
+=== Version 0.0.13 / 2001-08-24
+* Bug fixes
+  * Fixed rake task environment loading problem.
 === Version 0.0.12 / 2011-08-23
 * Enhancements
   * Autocomplete for url added
