--- a/History.rdoc
+++ b/History.rdoc
@@ -1,3 +1,7 @@
+=== Version 0.1.0 / 
+* Changes
+  * Works with lolita 3.2.0 and rails 3.1.0
+  
 === Version 0.0.15 / 2011-08-24
 * Bug fixes
   * require problem in generate_urls fixed
