--- a/History.rdoc
+++ b/History.rdoc
@@ -1,4 +1,8 @@
-=== Version 0.1.0 / 
+=== Version 0.1.1 / 2011-09-06
+* Changes
+  * Works with rails 3.1 pipeline
+  
+=== Version 0.1.0 / 2011-09-05
 * Changes
   * Works with lolita 3.2.0 and rails 3.1.0
   
