--- a/History.rdoc
+++ b/History.rdoc
@@ -1,3 +1,7 @@
+=== Version 0.0.2; 0.1.3 / 2011-09-06
+* Bug fixes
+  * Asset pipline improved and fixed
+  
 === Version 0.1.1 / 2011-09-06
 * Changes
   * Works with rails 3.1 pipeline
