--- a/config/locales/lv.yml
+++ b/config/locales/lv.yml
@@ -1,14 +1,20 @@
 lv:
   lolita:
     menu:
-      notice: "Izvēlne veiksmīgi saglabāta."
-      error: "Izvēlni neizdevās saglabāt. Mēģiniet vēlreiz."
-      "branch created": "Jauns izvēlnes sadaļa izveidota."
-      "branch deleted": "Izvēlnes sadaļa dzēsta."
       add_new: "Pievienot jaunu"
       save_menu: "Saglabāt izvēlni"
+    menu_item:
+      new: "Jauna sadaļa"
     nested_tree:
       "branch created": "Izveidots(-a) %{name}."
       "branch deleted": "%{name} dzēsts(-a)."
       notice: "%{name} veiksmīgi saglabāts(-a)."
       error: "%{name} netika saglabāts(-a). Mēģiniet vēlreiz."
+  active_record:
+    models:
+      menu_item:
+        one: Izvēlnes ierakstu
+        other: Izvēlnes
+      menu:
+        one: Izvēlni
+        other: Izvēlnes
