Added some attr_accessible to some attributes for rails 3.2, fixed some translations

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -6,12 +6,19 @@ en:
       "branch created": "New menu item created."
       "branch deleted": "Menu item deleted."
       add_new: "Add new"
-      save_menu: "Save menu"     
+      save_menu: "Save menu"
+    nested_tree:
+      "branch created": "Barnch %{name} created."
+      "branch deleted": "%{name} deleted."
+      notice: "%{name} successfully saved."
+      error: "%{name} failed to save. Try again."
+    menu_item:
+      new: "New item"     
   activerecord:
     models:
       menu_item:
         one: Menu item
-        other: Menues
+        other: Menus
       menu:
         one: Menu
-        other: Menues
+        other: Menus
