--- a/config/locales/sv_SE.yml
+++ b/config/locales/sv_SE.yml
@@ -7,8 +7,9 @@ en:
       "branch deleted": "Menu item deleted."
       add_new: "Add new"
       save_menu: "Save menu"
+      save_tree: "Save tree"
     nested_tree:
-      "branch created": "Barnch %{name} created."
+      "branch created": "Branch %{name} created."
       "branch deleted": "%{name} deleted."
       notice: "%{name} successfully saved."
       error: "%{name} failed to save. Try again."
